# ANT

./: .gitignore  CMakeLists.txt  README.md
cmake/: HandleDependencies.cmake  antMacros.cmake  macros.cmake
cmake/Modules/: FindBullet.cmake  FindDirectX.cmake  FindTinyXML.cmake
data/: default_logging.xml
data/World/: physics_test.xml  testlevel.xml
data/actors/: Kamek.xml  Yoshi.xml  YoshiSpriteData.xml  bowserActor.xml  circleActor.xml  circleActor2.xml  floorActor.xml  rectangleActor.xml  sensorActor.xml  testActor.xml  testBackground.xml
data/config/: physics.xml
data/lua/: ActorManager.lua  Events.lua  LevelInit.lua  LevelPostInit.lua  MatrixMath.lua  PreInit.lua  testScript.lua
examples/: CMakeLists.txt
examples/basictest/: CMakeLists.txt
examples/basictest/src/: App.cpp  App.hpp  GameState.cpp  GameState.hpp  SplashState.cpp  SplashState.hpp  main.cpp
examples/example_sfmlapp/: CMakeLists.txt
examples/example_sfmlapp/src/: TestApp.cpp  TestApp.hpp  TestController.cpp  TestController.hpp  TestEvents.cpp  TestEvents.hpp  TestGameLogic.cpp  TestGameLogic.hpp  TestGameView.cpp  TestGameView.hpp  main.cpp
include/: ant_config.hpp  ant_config.hpp.in  core_include.hpp  tile_include.hpp
include/ant/: ant_std.hpp  core_types.hpp
include/ant/2DPhysics/: Box2DPhysics.hpp  IGamePhysics2D.hpp  PhysicsComponent.hpp  PhysicsEvents.hpp
include/ant/actors/: Actor.hpp  ActorComponent.hpp  ActorFactory.hpp  AnimationComponent.hpp  BaseScriptComponent.hpp  TransformComponent.hpp
include/ant/assets/: FontAsset.hpp  FontHandler.hpp  MusicAsset.hpp  MusicHandler.hpp  SoundAsset.hpp  SoundHandler.hpp  TextureAsset.hpp  TextureHandler.hpp
include/ant/classes/: AssetManager.hpp  BaseGameLogic.hpp  HumanView.hpp  ProcessManagerSingleton.hpp  StatManager.hpp  StateManager.hpp
include/ant/eventsystem/: Events.hpp  IEventManager.hpp
include/ant/gccDebug/: MiniDump.hpp
include/ant/gccUtils/: Math.hpp  PrimeSearch.hpp  String.hpp  templates.hpp  types.hpp
include/ant/graphicsSFML/: ISFMLRenderComponent.hpp  ISFMLSceneNode.hpp  SFMLRenderComponent.hpp  SFMLRenderer.hpp  SFMLScene.hpp  SFMLSceneNode.hpp  SpriteUtilities.hpp
include/ant/gui/: UserInterface.hpp
include/ant/interfaces/: GenericObjectFactory.hpp  IApp.hpp  IAppWindows.hpp  IAssetHandler.hpp  IGameLogic.hpp  IGameView.hpp  ILogger.hpp  IRenderer.hpp  ISFMLApp.hpp  IScreenElement.hpp  IState.hpp  InputHandlers.hpp  TAsset.hpp  TAssetHandler.hpp
include/ant/loggers/: FatalLogger.hpp  FileLogger.hpp  Log.hpp  ScopeLogger.hpp  StringLogger.hpp
include/ant/luascripting/: LuaScriptExports.hpp  LuaStateManager.hpp  ScriptEvent.hpp  ScriptEventListener.hpp
include/ant/resources/: IResourceFile.hpp  Resource.hpp  ResourceCache.hpp  ResourceCacheManager.hpp  ResourceFiles.hpp  ResourceHandle.hpp  ResourceLoaders.hpp  TextureResource.hpp  XmlResource.hpp  ZipFIle.hpp
include/ant/utils/: CFilter.hpp  DataUtils.hpp  FilePathContainer.h  Types.hpp  WinInitialization.hpp
include/antTile/: CArea.h  CBoss.h  CEntity.h  CMap.h  CPlayer.h  Define.h
src/: CMakeLists.txt
src/ant/: CMakeLists.txt  core_types.cpp
src/ant/2DPhysics/: Box2DPhysics.cpp  PhysicsComponent.cpp  PhysicsEvents.cpp
src/ant/Graphics3D/: Geometry.cpp
src/ant/actors/: ActorComponent.cpp  ActorFactory.cpp  AnimationComponent.cpp  BaseScriptComponent.cpp  TransformComponent.cpp
src/ant/assets/: FontAsset.cpp  FontHandler.cpp  MusicAsset.cpp  MusicHandler.cpp  SoundAsset.cpp  SoundHandler.cpp  TextureAsset.cpp  TextureHandler.cpp
src/ant/classes/: AssetManager.cpp  BaseGameLogic.cpp  HumanView.cpp  ProcessManagerSingleton.cpp  StatManager.cpp  StateManager.cpp
src/ant/eventsystem/: EventManager.cpp  Events.cpp  IEventManager.cpp
src/ant/gccDebug/: Debugging.cpp  MiniDump.cpp
src/ant/gccUtils/: Math.cpp  Math_Random.cpp  PrimeSearch.cpp  String.cpp
src/ant/graphicsSFML/: SFMLRenderComponent.cpp  SFMLRenderer.cpp  SFMLScene.cpp  SFMLSceneNode.cpp  SpriteUtilities.cpp
src/ant/interfaces/: IApp.cpp  IAppWindows.cpp  IAssetHandler.cpp  ILogger.cpp  ISFMLApp.cpp  IState.cpp
src/ant/loggers/: FatalLogger.cpp  FileLogger.cpp  ScopeLogger.cpp  StringLogger.cpp
src/ant/luascripting/: LuaScriptExports.cpp  LuaStateManager.cpp  ScriptEvent.cpp  ScriptEventListener.cpp  ScriptProcess.cpp
src/ant/resources/: Resource.cpp  ResourceCache.cpp  ResourceFiles.cpp  ResourceHandle.cpp  ResourceLoaders.cpp  XmlResource.cpp  ZipFile.cpp
src/ant/utils/: CFilter.cpp  FilePathContainer.cpp  WinInitialization.cpp
src/antTile/: CAnimation.cpp  CArea.cpp  CBoss.cpp  CCamera.cpp  CEntity.cpp  CMakeLists.txt  CMap.cpp  CPlayer.cpp  CTile.cpp  EntityCol.cpp
tinyxml/: CMakeLists.txt
unittests/: CMakeLists.txt  main.cpp  unittest_Actor.cpp  unittest_BasicGameLogic.cpp  unittest_EventManager.cpp  unittest_Physics.cpp  unittest_Process.cpp  unittest_Resource.cpp  unittest_ResourceCache.cpp  unittest_ScriptLua.cpp  unittests.hpp
