#Add the core library include header
set(CORE_HEADER ${ANT_INCLUDE_DIR}/core_include.hpp)

MESSAGE ( ${CORE_HEADER})

# core library additional include files
FILE( GLOB_RECURSE 
	INCLUDES
    ${ANT_INCLUDE_DIR}/ant/*.hpp
)

FILE( GLOB_RECURSE
	SOURCES
	${ANT_SOURCE_DIR}/ant/*.cpp
) 

# add ANT library
add_library(${ANTCORE_TARGET_NAME} ${CORE_HEADER} ${INCLUDES} ${SOURCES} ${ANT_INCLUDE_DIR}/ant_config.hpp)

# Set depedency on 
ADD_DEPENDENCIES(${ANTCORE_TARGET_NAME} box2d)
ADD_DEPENDENCIES(${ANTCORE_TARGET_NAME} zlib)
ADD_DEPENDENCIES(${ANTCORE_TARGET_NAME} sfml)

# link SFML
ANT_LINK_LIBRARIES(${ANTCORE_TARGET_NAME} ${DEPENDECY_LIBS})

ANT_LINK_LIBRARIES(${ANTCORE_TARGET_NAME} ${TINYXML_TARGET_NAME} ${LUAPLUSPLUS_TARGET_NAME})

target_link_libraries(${ANTCORE_TARGET_NAME}
	       debug ${BOX2D_LIB_DIR}/box2d/DebugLibs/${CMAKE_FIND_LIBRARY_PREFIXES}box2d${CMAKE_FIND_LIBRARY_SUFFIXES}
	       optimized ${BOX2D_LIB_DIR}/box2d/ReleaseLibs/${CMAKE_FIND_LIBRARY_PREFIXES}box2d${CMAKE_FIND_LIBRARY_SUFFIXES}
)

target_link_libraries(${ANTCORE_TARGET_NAME}
	       debug ${ZLIB_LIB_DIR}/DebugLibs/${CMAKE_FIND_LIBRARY_PREFIXES}zlib${CMAKE_FIND_LIBRARY_SUFFIXES}
	       optimized ${ZLIB_LIB_DIR}/ReleaseLibs/${CMAKE_FIND_LIBRARY_PREFIXES}zlib${CMAKE_FIND_LIBRARY_SUFFIXES}
)

message("rjfksdfsdf sdj: " ${SFML_LIBRARIES})
message("rjfksdfsdf sdj openGL: " ${OPENGL_LIBRARIES})

target_link_libraries(${ANTCORE_TARGET_NAME} ${SFML_LIBRARIES})

# Set properties for antCore
SET_TARGET_PROPERTIES(${ANTCORE_TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_PROPERTY(TARGET ${ANTCORE_TARGET_NAME} PROPERTY FOLDER "antCore")

